<resources>
    <string name="app_name">Asclepius</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">News</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize.See error logs for details</string>
    <string name="time">Time</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="image">Image</string>
    <string name="title_news">Title</string>
    <string name="description">Description</string>
    <string name="preview_image">Preview Image</string>
    <string name="empty_message_history">History Deteksi Image Cancer belum ada nih, ayo deteksi image dulu 😊</string>
    <string name="message_end_history">Ups, kamu udah sampai di akhir history nih..</string>
    <string name="result_image">result image</string>
</resources>